# layout

./: .gitignore  README.TXT  inuk_websites  notes.txt  plan.txt  scratch  style.css
analyzer/: generate_analysis.py  generate_maps.py  new.py  table.tsv
analyzer/analyzer/: Cargo.toml  build_wasm.sh  task.py  task.sh
analyzer/analyzer/src/: data.rs  lib.rs  main.rs  oldmain.rs  syllabic_parser.rs  syllabic_unit.rs  template.rs  tokenizer.rs  wasm.rs
analyzer/analyzer/tests/: test.proptest-regressions  test.rs
analyzer/simd_stuff/: Cargo.toml
analyzer/tokenizer/: Cargo.toml
converter/: Cargo.toml  index.html  notes.txt  notes_2.ttx  scratch.html
converter/scripts/: generate.py  table.py
converter/scripts/ngrams/: ngrams.py
converter/src/: auto.rs  lib.rs  main.rs  maps.rs  nif.rs  wasm.rs
converter/tests/: test.proptest-regressions  test.rs
graph/: census.py  census_II.py  census_III.py  inuktitut_data.txt  layout.py  text.py
graph/census/: commands  headers.TAB
graph/graphs/: graph.py
inuklib/: Cargo.toml  deny.toml
inuklib/inuklib/: Cargo.toml  build_extension.sh
inuklib/inuklib/src/: data.rs  syllabic_parser.rs  tokenizer.rs
inuklib/inuklib/static/extension/common/: init.js  inuktitut_style.css
inuklib/inuklib/static/extension/firefox/: manifest.json
inuklib/inuklib/static/web/: index.html
inuklib/scripts/: generate.py
inuklib/xtask/: Cargo.toml
inuklib_project/: Cargo.toml  a.py  about.toml  deny.toml  main.py
inuklib_project/inuklib/: Cargo.toml
inuklib_project/task/: __main__.py  build_wasm.py  common.py  generate.py  generate_utf8.py  main.py
mockup/full/: index.html  index.js
scripts/: census.py  classify.py  crawl.py  grid.py  grid_II.py  inukdata.py  municipalities.txt
scripts/graphs/: inukdata.py
(+25 files in other folders)
