[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
proptest = "1.4.0"
rustler = { version = "0.31.0", optional = true }

[features]
nif = ["dep:rustler"]