[package]
name = "converter"
version = "0.1.0"
edition = "2021"


[features]
wasm = ["dep:wasm-bindgen"]

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }

wasm-bindgen = { version = "0.2.91", optional = true }


[dev-dependencies]
proptest = { version = "1.4.0" }


[lib]
crate-type = ["cdylib", "rlib"] 

