[package]
name = "inuklib"
version = "0.1.0"
edition = "2021"

[features]
wasm = ["dep:wasm-bindgen"]

[dev-dependencies]
proptest = { version = "1.5.0" }

[dependencies]
arrayvec = "0.7.4"
enumset = "1.1.3"
once_cell = "1.19.0"
phf = "0.11.2"
phf_macros = "0.11.2"
regex = "1.10.5"

wasm-bindgen = { version = "0.2.92", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]
